--- a/script/image_preview.html
+++ b/script/image_preview.html
@@ -1,5 +1,4 @@
 <script language="javascript">
-<!--
 function previewImage(targetObj, View_area) {
 	//alert (targetObj);
 	//alert (View_area);
@@ -58,8 +57,7 @@ function previewImage(targetObj, View_area) {
 		}
 	}
 }
-//-->
 </script>
 
 <input type="file" name="profile_pt" id="profile_pt" onchange="previewImage(this,'View_area')">
-<div id='View_area' style='position:relative; width: 100px; height: 100px; color: black; border: 0px solid black; dispaly: inline; '></div>
+<div id='View_area' style='position:relative; width: 100px; height: 100px; color: black; border: 0px solid black; dispaly; inline; '></div>
